--- a/index.html
+++ b/index.html
@@ -1,9 +1,38 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Primero</title>
-</head>
-<body>
-	primer Archivo
-</body>
+	<head>
+		<title>Primero</title>
+		<link rel="stylesheet" type="text/css" href="estilos.css">
+	</head>
+
+	<body>
+		
+		<h1> Formulario </h1>
+
+		<form method="GET" action="guardarPersona.html">
+			<label for="nombre">Nombre</label>
+			<input type="text" id="nombre" name="nombre" placeholder="Mi nombre" />
+			<br />
+			<label for="fechaNacimiento">Fecha de Nacimiento</label>
+			<input type="date" id="fechaNacimiento" name="fechaNacimiento" value="1111-11-11" />
+			<br />
+			<label for="dni">Dni</label>
+			<input type="number" id="dni" name="dni" />
+			<br />
+			Genero: 
+			<input type="radio" name="genero" value="F"> Femenino
+			<input type="radio" name="genero" value="M"> Masculino
+			<br />
+			Hobbies: 
+			<input type="checkbox" name="hobbies[]" value="F"> Futbol
+			<input type="checkbox" name="hobbies[]" value="B"> Beisbol
+			
+			<br>
+			Comentarios:
+			<textarea rows="20" cols="20"></textarea>
+
+		</form>
+
+	</body>
+
 </html>
